--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,6 @@ dependencies {
     compile 'com.android.support:design:25.2.0'
     compile 'com.android.support:recyclerview-v7:25.2.0'
     compile 'com.android.support:cardview-v7:25.2.0'
-    compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
 
     //Dagger, mortar & flow
     compile 'com.squareup.dagger:dagger:1.2.1'
@@ -69,4 +68,5 @@ dependencies {
     compile 'com.feerlaroc.utils:feerlaroc-utils:0.0.000'
     compile 'com.feerlaroc.zoho:feerlaroc-zoho:0.0.000'
 
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
 }
