--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,24 +29,22 @@ android {
         exclude 'META-INF/DEPENDENCIES'
         exclude 'META-INF/NOTICE'
     }
+
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-
     compile 'com.android.support:appcompat-v7:25.2.0'
     compile 'com.android.support:design:25.2.0'
     compile 'com.android.support:recyclerview-v7:25.2.0'
     compile 'com.android.support:cardview-v7:25.2.0'
-
     //Dagger, mortar & flow
     compile 'com.squareup.dagger:dagger:1.2.1'
     provided 'com.squareup.dagger:dagger-compiler:1.2.1'
     compile 'com.squareup.mortar:mortar:0.17'
     compile 'com.squareup.flow:flow:0.10'
     compile 'com.squareup.flow:flow-path:0.10'
-
     //Reactive
     compile 'io.reactivex:rxandroid:1.2.1'
     compile 'com.jakewharton:butterknife:5.1.2'
@@ -54,19 +52,18 @@ dependencies {
     compile 'com.jakewharton.rxbinding:rxbinding-appcompat-v7:0.4.0'
     compile 'com.jakewharton.rxbinding:rxbinding-design:0.4.0'
     compile 'com.jakewharton.rxbinding:rxbinding-recyclerview-v7:0.4.0'
-
     //Networking # Http
     compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
-
     // Logging
     compile 'com.jakewharton.timber:timber:3.1.0'
-
     // Image Loading
     compile 'com.squareup.picasso:picasso:2.5.2'
-
-    compile 'com.feerlaroc.widgets:feerlaroc-widgets:0.0.000'
-    compile 'com.feerlaroc.utils:feerlaroc-utils:0.0.000'
-    compile 'com.feerlaroc.zoho:feerlaroc-zoho:0.0.000'
-
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+
+    compile 'com.feerlaroc.widgets:feerlaroc-widgets:0.0.001'
+    compile 'com.feerlaroc.utils:feerlaroc-utils:0.0.001'
+    compile 'com.feerlaroc.zoho:feerlaroc-zoho:0.0.001'
+
+    compile 'cn.aigestudio.wheelpicker:WheelPicker:1.1.2'
+
 }
