--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,9 @@
 buildscript {
     repositories {
         jcenter()
+        maven {
+            url 'https://dl.bintray.com/khosimorafo/maven/'
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.0'
@@ -18,6 +21,9 @@ allprojects {
         jcenter()
         maven {
             url 'https://dl.bintray.com/khosimorafo/maven/'
+        }
+        flatDir {
+            dirs 'libs'
         }
     }
 }
